--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask
-pandas
-openpyxl
+Flask==2.3.3
+pandas==2.1.0
+openpyxl==3.1.2
+matplotlib==3.7.2
+reportlab==4.0.4
+numpy==1.24.3
+Pillow==10.0.0
